kubernetes/pictionary-app.yaml
---
# 2. Base de données : Déploiement et Service réseau
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.11
        volumeMounts:
        - name: init-script-volume
          mountPath: /docker-entrypoint-initdb.d/init.sql
          subPath: init.sql
      volumes:
      - name: init-script-volume
        configMap:
          name: db-init-script

---
apiVersion: v1
kind: Service
metadata:
  name: db  # Ce nom est crucial, c'est le hostname que le PHP va utiliser (DB_HOST=db)
spec:
  selector:
    app: mariadb
  ports:
    - port: 3306

---
# 3. Serveur Web (PHP) : Déploiement et Service exposé
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 2 # On lance 2 instances du site web pour la haute disponibilité !
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: ghcr.io/salim-nejdi/pictionary-web:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 80
